--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AccountActivity" />
+        <activity android:name=".AddAcountActivity" />
+        <activity android:name=".EditAccountActivity"></activity>
     </application>
 
 </manifest>
