--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="guajardo.budget">
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,7 +31,8 @@
         <activity android:name=".EditAccountActivity" />
         <activity android:name=".CategoryActivity" />
         <activity android:name=".AddCategoryActivity" />
-        <activity android:name=".EditCategoryActivity"></activity>
+        <activity android:name=".EditCategoryActivity" />
+        <activity android:name=".ExpenseActivity"></activity>
     </application>
 
 </manifest>
