--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:support-v4:25.3.0'
     testCompile 'junit:junit:4.12'
+    compile "com.google.android.gms:play-services-gcm:10.2.0"
 }
+
+apply plugin: 'com.google.gms.google-services'
